...
    icon: 'bar-chart-outline',
    iconActive: 'bar-chart',
    routeName: 'progress',
  },
  {
    name: 'settings',
    title: 'Settings',
    icon: 'settings-outline',
    iconActive: 'settings',
    routeName: 'settings',
  },
];

...
